# OP-ED-Pratice

./: readme.md
aula2-op-51/: CMakeLists.txt  main.c
aula3-op-51/: CMakeLists.txt  main.c  readme.md
aula3-op-51/0-definicoes/: definicoes.c  definicoes.h
aula3-op-51/1-rotacoes-avl/: 1-rotacoies-avl.c  1-rotacoies-avl.h
aula6-op-51/: CMakeLists.txt  main.c  readme.md
aula6-op-51/01-mergesort/: mergesort.c  mergesort.h
aula6-op-51/02-quicksort/: quicksort.c  quicksort.h
aula6-op-51/03-heapsort/: heapsort.c  heapsort.h
aula7-op-51/: CMakeLists.txt  main.c
aula7-op-51/01-busca-sequencial/: busca-sequencial.c  busca-sequencial.h
aula7-op-51/02-busca-indexada/: busca-indexada.c  busca-indexada.h
aula7-op-51/03-busca-binaria/: busca-binaria.c  busca-binaria.h
aula7-op-51/04-busca-binaria-palavras-manual/: busca-binaria-palavras-manual.c  busca-binaria-palavras-manual.h
aula7-op-51/05-busca-binaria-palavras-funcoes/: busca-binaria-palavras-funcoes.c  busca-binaria-palavras-funcoes.h
estrutura-de-dados-aula-1/: CMakeLists.txt
estrutura-de-dados-aula-10/: CMakeLists.txt
estrutura-de-dados-aula-2/: CMakeLists.txt
estrutura-de-dados-aula-3/: CMakeLists.txt
estrutura-de-dados-aula-4/: CMakeLists.txt
estrutura-de-dados-aula-5/: CMakeLists.txt
estrutura-de-dados-aula-6/: CMakeLists.txt
estrutura-de-dados-aula-8/: CMakeLists.txt
estrutura-de-dados-aula-9/: CMakeLists.txt
