cmake_minimum_required(VERSION 3.30)
project(estrutura_de_dados_aula_2 C)

set(CMAKE_C_STANDARD 11)

add_executable(estrutura_de_dados_aula_2 main.c
        incremento_decremento.c
        aritimetica.c
        acesso_memoria.c
        acesso_memoria.c
        comparacao_ponteiro.c
        ponteiro.c)
